--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,39 @@
         android:theme="@style/Theme.TaskManager"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".LowPriorityListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MediumPriorityListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HighPriorityListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CompletedTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HelpSectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TaskListActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
