added date time convertor as Room not recognize Date

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
 //    added coroutine related implementations (if needed)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
